scss/style.scss
@import "settings";
@import "foundation";
$font-stack: Helvetica Neue,
sans-serif;
body {
    font-family: $font-stack;
}

.row {
    max-width: 1280px;
}

.comic-grid {
    padding: 0 10px 0 10px;
}

.logo {
    fill: #ffffff;
    padding-top: 7px;
    width: 210px;
}

.top-bar .toggle-topbar.menu-icon a {
    padding: 0 0.9375rem 0 0.9375rem;
}

.columns.tight {
    padding-left: .4rem;
    padding-right: .4rem;
}

.ellipsis {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

div.stretchy-wrapper {
    overflow: hidden;
    width: 100%;
    /* comic cover ratio */
    padding-bottom: 152.49%;
    position: relative;
    background: black;
    img {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        color: white;
        font-size: 24px;
        text-align: center;
    }
}

@media #{$small-only} {
    .comic-grid {
        padding: 0 5px 0 5px;
    }
}

@media #{$medium-up} {
    .comic-grid {
        padding: 0 10px 0 10px;
    }
}

